setup header and section one

--- a/index.html
+++ b/index.html
@@ -19,9 +19,23 @@
     </ol>
 </div>
 
-    <div class="section-one"></div>
+    <div class="section-one">
 
-    <div class="section-two"></div>
+    <h1 class="hero">This website is awesome</h1>
+
+    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+
+    <button>Sign up</button>
+
+    <img src="/images/stickman.gif" alt="Stickman" width="24" height="39">
+
+    </div>
+
+    <div class="section-two">
+
+        
+
+    </div>
 
     <div class="section-three"></div>
 
