add call-to-action and footer to index.html

--- a/index.html
+++ b/index.html
@@ -58,11 +58,21 @@
         <strong>-Thor, God of Thunder</strong>
     </div>
 
-    <div class="call-to-action"></div>
+    <div class="call-to-action">
 
-    
+    <h>Call to action! It's time!</h>
 
-    <div class="footer"></div>
+    <p>Sign up for our product by clicking that button right over there!</p>
+
+    <button>Sign up</button>
+
+</div>
+
+    <div class="footer">
+
+        Copyright The Odin Project 2023
+    </div>
+
     
 </body>
 </html>
