Add style to header section

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <div class="header">
     <h1 class="logo">Header Logo</h1>
 
-    <ol>
-    <li>header link one</li>
-    <li>header link two</li>
-    <li>header link three</li>
-    </ol>
+    <div class="links">
+
+    <a href="www.bing.com">header link one</a>
+    <a href="www.bing.com">header link two</a>
+    <a href="www.bing.com">header link three</a>
+    
+</div>
 </div>
 
     <div class="section-one">
