add content and refactor stylesheet

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="icon" href="resources/sf-logo.png">
-        <link href="css/main.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="Style.css" rel="stylesheet" type="text/css" media="all"/>
         <title>San Francisco - Appreciation Page</title>
     </head>
     <body>
