add content to resources

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="content-info">
                     <div>
                         <img src="resources/sf-1.webp">
-                        <p>Michellin Dining</p>
+                        <p>Fine Dining</p>
                     </div>
                     <div>
                         <img src="resources/sf-2.webp">
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="bx quote">
-                <p>San Francisco is a city where people are never more abroad than when they are at home."
+                <p>"San Francisco is a city where people are never more abroad than when they are at home."
                 </p>
                 <b>
                     -- Benjamin F Taylor
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="bx footer">
-                <p>Copyright © The Odin Project 2021</p>
+                <p>Copyright © The Odin Project 2023</p>
             </div>
         </div>
     </body>
